services/data-viewer/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: data-viewer
  namespace: tdgl
spec:
  hosts:
    - "tdgl.local"
  gateways:
    - tdgl-gateway
  http:
    - route:
        - destination:
            host: data-viewer
            port:
              number: 80
